fixed toggle slider is not color changing at dark mode.

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 }
 
 [data-theme="dark"] {
-  --background-color: #0a0a0a;
+  --background-color: #242424;
   --foreground-color: #567aff;
   --primary-text-color: #f6f6f6;
   --secondary-text-color: #f6f6f6;
@@ -27,11 +27,11 @@
 }
 
 [data-bs-theme="dark"]{
-  --background-color: #0a0a0a;
+  --background-color: #242424;
   --foreground-color: #567aff;
   --primary-text-color: #f6f6f6;
   --secondary-text-color: #f6f6f6;
-  --background-nav-color: #0a0a0a;
+  --background-nav-color: #242424;
   --toggle-bg: #283452;
   --toggle-fg: #00a6ff;
 }
